Dna.LLVMInterop/API/LLVM/Transforms/Scalar.h

using namespace llvm;
//===----------------------------------------------------------------------===//
//
// LowerWidenableCondition - Lower widenable condition to i1 true.
//
DNA_EXPORT Pass* CreateLowerWidenableConditionPass()
{
    return createLowerWidenableConditionPass();
}
//===----------------------------------------------------------------------===//
//
// MergeICmps - Merge integer comparison chains into a memcmp
//
DNA_EXPORT Pass* CreateMergeICmpsLegacyPass()
{
    return createMergeICmpsLegacyPass();
}
//===----------------------------------------------------------------------===//
//
// ValuePropagation - Propagate CFG-derived value information
//
DNA_EXPORT Pass* CreateCorrelatedValuePropagationPass()
{
    return createCorrelatedValuePropagationPass();
}
//===----------------------------------------------------------------------===//
//
// InferAddressSpaces - Modify users of addrspacecast instructions with values
// in the source address space if using the destination address space is slower
// on the target. If AddressSpace is left to its default value, it will be
// obtained from the TargetTransformInfo.
//
DNA_EXPORT FunctionPass* CreateInferAddressSpacesPass(unsigned AddressSpace)
{
    return createInferAddressSpacesPass(AddressSpace);
}
//===----------------------------------------------------------------------===//
//
// LowerExpectIntrinsics - Removes llvm.expect intrinsics and creates
// "block_weights" metadata.
DNA_EXPORT FunctionPass* CreateLowerExpectIntrinsicPass()
{
    return createLowerExpectIntrinsicPass();
}
//===----------------------------------------------------------------------===//
//
// TLSVariableHoist - This pass reduce duplicated TLS address call.
//
DNA_EXPORT FunctionPass* CreateTLSVariableHoistPass()
{
    return createTLSVariableHoistPass();
}
//===----------------------------------------------------------------------===//
//
// LowerConstantIntrinsicss - Expand any remaining llvm.objectsize and
// llvm.is.constant intrinsic calls, even for the unknown cases.
//
DNA_EXPORT FunctionPass* CreateLowerConstantIntrinsicsPass()
{
    return createLowerConstantIntrinsicsPass();
}
//===----------------------------------------------------------------------===//
//
// PartiallyInlineLibCalls - Tries to inline the fast path of library
// calls such as sqrt.
//
DNA_EXPORT FunctionPass* CreatePartiallyInlineLibCallsPass()
{
    return createPartiallyInlineLibCallsPass();
}
//===----------------------------------------------------------------------===//
//
// SeparateConstOffsetFromGEP - Split GEPs for better CSE
//
DNA_EXPORT FunctionPass* CreateSeparateConstOffsetFromGEPPass(bool LowerGEP)
{
    return createSeparateConstOffsetFromGEPPass(LowerGEP);
}
//===----------------------------------------------------------------------===//
//
// SpeculativeExecution - Aggressively hoist instructions to enable
// speculative execution on targets where branches are expensive.
//
DNA_EXPORT FunctionPass* CreateSpeculativeExecutionPass()
{
    return createSpeculativeExecutionPass();
}
// Same as createSpeculativeExecutionPass, but does nothing unless
// TargetTransformInfo::hasBranchDivergence() is true.
DNA_EXPORT FunctionPass* CreateSpeculativeExecutionIfHasBranchDivergencePass()
{
    return createSpeculativeExecutionIfHasBranchDivergencePass();
}
//===----------------------------------------------------------------------===//
//
// StraightLineStrengthReduce - This pass strength-reduces some certain
// instruction patterns in straight-line code.
//
DNA_EXPORT FunctionPass* CreateStraightLineStrengthReducePass()
{
    return createStraightLineStrengthReducePass();
}
//===----------------------------------------------------------------------===//
//
// PlaceSafepoints - Rewrite any IR calls to gc.statepoints and insert any
// safepoint polls (method entry, backedge) that might be required.  This pass
// does not generate explicit relocation sequences - that's handled by
// RewriteStatepointsForGC which can be run at an arbitrary point in the pass
// order following this pass.
//
DNA_EXPORT FunctionPass* CreatePlaceSafepointsPass()
{
    return createPlaceSafepointsPass();
}
//===----------------------------------------------------------------------===//
//
// RewriteStatepointsForGC - Rewrite any gc.statepoints which do not yet have
// explicit relocations to include explicit relocations.
//
DNA_EXPORT ModulePass* CreateRewriteStatepointsForGCLegacyPass()
{
    return createRewriteStatepointsForGCLegacyPass();
}
//===----------------------------------------------------------------------===//
//
// Float2Int - Demote floats to ints where possible.
//
DNA_EXPORT FunctionPass* CreateFloat2IntPass()
{
    return createFloat2IntPass();
}
//===----------------------------------------------------------------------===//
//
// NaryReassociate - Simplify n-ary operations by reassociation.
//
DNA_EXPORT FunctionPass* CreateNaryReassociatePass()
{
    return createNaryReassociatePass();
}
//===----------------------------------------------------------------------===//
//
// LoopDistribute - Distribute loops.
//
DNA_EXPORT FunctionPass* CreateLoopDistributePass()
{
    return createLoopDistributePass();
}
//===----------------------------------------------------------------------===//
//
// LoopFuse - Fuse loops.
//
DNA_EXPORT FunctionPass* CreateLoopFusePass()
{
    return createLoopFusePass();
}
//===----------------------------------------------------------------------===//
//
// LoopLoadElimination - Perform loop-aware load elimination.
//
DNA_EXPORT FunctionPass* CreateLoopLoadEliminationPass()
{
    return createLoopLoadEliminationPass();
}
//===----------------------------------------------------------------------===//
//
// LoopDataPrefetch - Perform data prefetching in loops.
//
DNA_EXPORT FunctionPass* CreateLoopDataPrefetchPass()
{
    return createLoopDataPrefetchPass();
}
//===----------------------------------------------------------------------===//
//
// LibCallsShrinkWrap - Shrink-wraps a call to function if the result is not
// used.
//
DNA_EXPORT FunctionPass* CreateLibCallsShrinkWrapPass()
{
    return createLibCallsShrinkWrapPass();
}
//===----------------------------------------------------------------------===//
//
// LoopSimplifyCFG - This pass performs basic CFG simplification on loops,// primarily to help other loop passes.
//
DNA_EXPORT Pass* CreateLoopSimplifyCFGPass()
{
    return createLoopSimplifyCFGPass();
}
//===----------------------------------------------------------------------===//
//
// WarnMissedTransformations - This pass emits warnings for leftover forced
// transformations.
//
DNA_EXPORT Pass* CreateWarnMissedTransformationsPass()
{
    return createWarnMissedTransformationsPass();
}
//===----------------------------------------------------------------------===//
//
// This pass does instruction simplification on each
// instruction in a function.
//
DNA_EXPORT FunctionPass* CreateInstSimplifyLegacyPass()
{
    return createInstSimplifyLegacyPass();
}
//===----------------------------------------------------------------------===//
//
// createScalarizeMaskedMemIntrinPass - Replace masked load, store, gather
// and scatter intrinsics with scalar code when target doesn't support them.
//
DNA_EXPORT FunctionPass* CreateScalarizeMaskedMemIntrinLegacyPass()
{
    return createScalarizeMaskedMemIntrinLegacyPass();
}