Dna/LLVMInterop/API/LLVMBindings/Transforms/NativeScalarApi.cs


        //===----------------------------------------------------------------------===//
        //
        // LowerWidenableCondition - Lower widenable condition to i1 true.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateLowerWidenableConditionPass")]
        public unsafe static extern LLVMOpaquePass* CreateLowerWidenableConditionPass();

        //===----------------------------------------------------------------------===//
        //
        // MergeICmps - Merge integer comparison chains into a memcmp
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateMergeICmpsLegacyPass")]
        public unsafe static extern LLVMOpaquePass* CreateMergeICmpsLegacyPass();

        //===----------------------------------------------------------------------===//
        //
        // ValuePropagation - Propagate CFG-derived value information
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateCorrelatedValuePropagationPass")]
        public unsafe static extern LLVMOpaquePass* CreateCorrelatedValuePropagationPass();

        //===----------------------------------------------------------------------===//
        //
        // InferAddressSpaces - Modify users of addrspacecast instructions with values
        // in the source address space if using the destination address space is slower
        // on the target. If AddressSpace is left to its default value, it will be
        // obtained from the TargetTransformInfo.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateInferAddressSpacesPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateInferAddressSpacesPass(uint AddressSpace);

	//===----------------------------------------------------------------------===//
	//
	// LowerExpectIntrinsics - Removes llvm.expect intrinsics and creates
	// "block_weights" metadata.
	[DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateLowerExpectIntrinsicPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateLowerExpectIntrinsicPass();

        //===----------------------------------------------------------------------===//
        //
        // TLSVariableHoist - This pass reduce duplicated TLS address call.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateTLSVariableHoistPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateTLSVariableHoistPass();

        //===----------------------------------------------------------------------===//
        //
        // LowerConstantIntrinsicss - Expand any remaining llvm.objectsize and
        // llvm.is.constant intrinsic calls, even for the unknown cases.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateLowerConstantIntrinsicsPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateLowerConstantIntrinsicsPass();

        //===----------------------------------------------------------------------===//
        //
        // PartiallyInlineLibCalls - Tries to inline the fast path of library
        // calls such as sqrt.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreatePartiallyInlineLibCallsPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreatePartiallyInlineLibCallsPass();

        //===----------------------------------------------------------------------===//
        //
        // SeparateConstOffsetFromGEP - Split GEPs for better CSE
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateSeparateConstOffsetFromGEPPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateSeparateConstOffsetFromGEPPass(bool LowerGEP);

        //===----------------------------------------------------------------------===//
        //
        // SpeculativeExecution - Aggressively hoist instructions to enable
        // speculative execution on targets where branches are expensive.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateSpeculativeExecutionPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateSpeculativeExecutionPass();

        // Same as createSpeculativeExecutionPass, but does nothing unless
        // TargetTransformInfo::hasBranchDivergence() is true.
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateSpeculativeExecutionIfHasBranchDivergencePass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateSpeculativeExecutionIfHasBranchDivergencePass();

        //===----------------------------------------------------------------------===//
        //
        // StraightLineStrengthReduce - This pass strength-reduces some certain
        // instruction patterns in straight-line code.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateStraightLineStrengthReducePass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateStraightLineStrengthReducePass();

        //===----------------------------------------------------------------------===//
        //
        // PlaceSafepoints - Rewrite any IR calls to gc.statepoints and insert any
        // safepoint polls (method entry, backedge) that might be required.  This pass
        // does not generate explicit relocation sequences - that's handled by
        // RewriteStatepointsForGC which can be run at an arbitrary point in the pass
        // order following this pass.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreatePlaceSafepointsPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreatePlaceSafepointsPass();

        //===----------------------------------------------------------------------===//
        //
        // RewriteStatepointsForGC - Rewrite any gc.statepoints which do not yet have
        // explicit relocations to include explicit relocations.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateRewriteStatepointsForGCLegacyPass")]
        public unsafe static extern LLVMOpaqueModulePass* CreateRewriteStatepointsForGCLegacyPass();

        //===----------------------------------------------------------------------===//
        //
        // Float2Int - Demote floats to ints where possible.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateFloat2IntPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateFloat2IntPass();

        //===----------------------------------------------------------------------===//
        //
        // NaryReassociate - Simplify n-ary operations by reassociation.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateNaryReassociatePass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateNaryReassociatePass();

        //===----------------------------------------------------------------------===//
        //
        // LoopDistribute - Distribute loops.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateLoopDistributePass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateLoopDistributePass();

        //===----------------------------------------------------------------------===//
        //
        // LoopFuse - Fuse loops.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateLoopFusePass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateLoopFusePass();

        //===----------------------------------------------------------------------===//
        //
        // LoopLoadElimination - Perform loop-aware load elimination.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateLoopLoadEliminationPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateLoopLoadEliminationPass();

        //===----------------------------------------------------------------------===//
        //
        // LoopVersioning - Perform loop multi-versioning.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateLoopVersioningPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateLoopVersioningPass();

        //===----------------------------------------------------------------------===//
        //
        // LoopDataPrefetch - Perform data prefetching in loops.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateLoopDataPrefetchPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateLoopDataPrefetchPass();

        //===----------------------------------------------------------------------===//
        //
        // LibCallsShrinkWrap - Shrink-wraps a call to function if the result is not
        // used.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateLibCallsShrinkWrapPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateLibCallsShrinkWrapPass();

        //===----------------------------------------------------------------------===//
        //
        // LoopSimplifyCFG - This pass performs basic CFG simplification on loops,// primarily to help other loop passes.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateLoopSimplifyCFGPass")]
        public unsafe static extern LLVMOpaquePass* CreateLoopSimplifyCFGPass();

        //===----------------------------------------------------------------------===//
        //
        // WarnMissedTransformations - This pass emits warnings for leftover forced
        // transformations.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateWarnMissedTransformationsPass")]
        public unsafe static extern LLVMOpaquePass* CreateWarnMissedTransformationsPass();

        //===----------------------------------------------------------------------===//
        //
        // This pass does instruction simplification on each
        // instruction in a function.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateInstSimplifyLegacyPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateInstSimplifyLegacyPass();

        //===----------------------------------------------------------------------===//
        //
        // createScalarizeMaskedMemIntrinPass - Replace masked load, store, gather
        // and scatter intrinsics with scalar code when target doesn't support them.
        //
        [DllImport("Dna.LLVMInterop", CallingConvention = CallingConvention.Cdecl, EntryPoint = "CreateScalarizeMaskedMemIntrinLegacyPass")]
        public unsafe static extern LLVMOpaqueFunctionPass* CreateScalarizeMaskedMemIntrinLegacyPass();
    }
}
